src/objects/Coffee_GAPs_Adoption__c.object
<CustomObject>
    <fields>
        <fullName>Proper_Weed_Control_Adoption__c</fullName>
        <formula>IF ( !INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c, &apos;Proper and timely weed control&apos;), &apos;NA&apos;, 
IF (TEXT(Proper_Weed_Control_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (	OR(	
AND(TEXT(Weed_Control_Methods__c)==&apos;By hand hoeing&apos;, OR(TEXT(Frequency_of_Weeding__c) ==&apos;Twice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;Thrice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;More than 3 times in a year&apos; 
), 
OR(TEXT(Time_of_Weeding__c) == &apos;During the rainy season&apos;, TEXT(Time_of_Weeding__c) == &apos;During the dry season&apos; 
) 
), 

AND(TEXT(Weed_Control_Methods__c)==&apos;Use herbicides&apos;, TEXT(Frequency_of_Weeding__c) ==&apos;Twice a year&apos;, 
OR(TEXT(Amount_of_Herbicide_Used__c)==&apos;150ml in 15/20 ltrs of water&apos;, 
TEXT(Amount_of_Herbicide_Used__c)==&apos;200mls in 15/20 ltrs of water&apos;, 
TEXT(Amount_of_Herbicide_Used__c)==&apos;75mls in 15/20 ltrs of water&apos;), TEXT(Time_of_Weeding__c)==&apos;During the rainy season&apos;, 
TEXT(Use_of_Protective_Gear__c)==&apos;Yes&apos; 
), 

AND(TEXT(Weed_Control_Methods__c)==&apos;Slashing&apos;, OR(TEXT(Frequency_of_Weeding__c) ==&apos;Twice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;Thrice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;More than 3 times in a year&apos; 
), 
TEXT(Time_of_Weeding__c)==&apos;During the rainy season&apos; 
), 

AND(TEXT(Weed_Control_Methods__c)==&apos;Mulching&apos;, TEXT(Frequency_of_Weeding__c) == &apos;Twice a year&apos;, TEXT(Time_of_Weeding__c)==&apos;During the dry season&apos; 
), 

AND(TEXT(Weed_Control_Methods__c)==&apos;A combination of methods&apos;, OR(TEXT(Frequency_of_Weeding__c) ==&apos;Twice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;Thrice a year&apos;, 
TEXT(Frequency_of_Weeding__c) ==&apos;More than 3 times in a year&apos; 
), 
OR(TEXT(Time_of_Weeding__c) == &apos;During the rainy season&apos;, TEXT(Time_of_Weeding__c) == &apos;During the dry season&apos; 
) 

) 
), 
&apos;Yes&apos;, &apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 7 Proper Weed Control Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proper_Weed_Control_Discussed__c</fullName>
        <label>GAP 7 Proper Weed Control Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pruning_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c ,&apos;Coffee desuckering, pruning and stumping&apos;), &apos;NA&apos;,
IF (TEXT(Desuckering_Pruning_Stumping_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,  
IF (AND (TEXT(Time_of_Pruning__c)==&apos;After harvesting the main crop&apos;, TEXT(No_of_Stems_per_Tree_after_Prune__c)==&apos;3-4 stems&apos;, TEXT(Tool_used_for_Pruning__c)==&apos;Pruning saw&apos;), &apos;Yes&apos;, &apos;No&apos;) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2 Pruning Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Keeping_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c, &apos;Proper Coffee farm record keeping&apos;), &apos;NA&apos;, 
IF (TEXT(Record_Keeping_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (AND (TEXT(Use_records_to_make_decisions__c)==&apos;Yes&apos;, 
Kind_of_Records_Kept_Count__c &gt;= 2, 
OR(TEXT(Method_of_Record_Storage__c)==&apos;Book/chart&apos;, TEXT(Method_of_Record_Storage__c)==&apos;Computer&apos;) 
), 
&apos;Yes&apos;, &apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 5 Record Keeping Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Keeping_Discussed__c</fullName>
        <label>GAP 5 Record Keeping Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management_Adoption__c</fullName>
        <formula>IF ( !INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c ,&apos;Soil fertility management&apos;), &apos;NA&apos;, 
IF (TEXT(Soil_Fertility_Management_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
IF (	OR(	
AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Manure&apos;, OR(TEXT(Amount_of_Manure_per_Tree__c) == &apos;One basin&apos;, 
TEXT(Amount_of_Manure_per_Tree__c) == &apos;Two basins&apos; 
), 
AND(!INCLUDES(Stage_of_Fertilizer_Application__c, &apos;NA&apos;), 
Stage_of_Fertilizer_Count__c &gt;= 2 
), 
TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Ring banding (Placed around the tree)&apos;, 
TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos; 
), 

AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Inorganic/chemical fertilizer&apos;, OR(INCLUDES(Type_of_Fertilizers_Used__c, &apos;CAN&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;NPK&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;DAP&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;Urea&apos;) 
), 
OR(TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;50 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;100 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;150 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;300 grams&apos; 
), 
AND(!INCLUDES(Stage_of_Fertilizer_Application__c, &apos;NA&apos;), 
Stage_of_Fertilizer_Count__c &gt;= 2 
), 
TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Ring banding (Placed around the tree)&apos;, 
TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos; 
), 

AND(TEXT(Means_of_Soil_Fertilization__c) == &apos;Both manure and inorganic/chemical fertilizer&apos;, 
OR(TEXT(Amount_of_Manure_per_Tree__c) == &apos;One basin&apos;,TEXT(Amount_of_Manure_per_Tree__c) == &apos;Two basins&apos; 
), 

AND(!INCLUDES(Stage_of_Fertilizer_Application__c, &apos;NA&apos;), 
Stage_of_Fertilizer_Count__c &gt;= 2 
), 
OR(INCLUDES(Type_of_Fertilizers_Used__c, &apos;CAN&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;NPK&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;DAP&apos;), 
INCLUDES(Type_of_Fertilizers_Used__c, &apos;Urea&apos;) 
), 
OR(TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;50 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;100 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;150 grams&apos;, 
TEXT(Amount_of_Fertilizer_per_Plant__c) == &apos;300 grams&apos; 
), 
TEXT(Mode_Fertilizer_Manure_Placement__c) == &apos;Ring banding (Placed around the tree)&apos;, 
TEXT(Time_of_Fertilizer_Application__c) == &apos;At the beginning of rains&apos; 
) 
), 
&apos;Yes&apos;, &apos;No&apos; 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 1 Soil Fertility Management Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soil_Fertility_Management_Discussed__c</fullName>
        <label>GAP 1 Soil Fertility Managemt Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_Water_Conservation_Discussed__c</fullName>
        <label>GAP 3 Soil Water Conservation Discussed?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Soil_and_Water_Conservation__c</fullName>
        <label>GAP 3 Soil &amp; Water Conservation Measures</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digging trenches or terraces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant grass across the slope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plant shade trees or wind breakers</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_of_Fertilizer_Application__c</fullName>
        <label>GAP 1.5 Stage of Fertilizer Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-2 months after planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stage_of_Fertilizer_Count__c</fullName>
        <formula>IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;At planting&apos;), 1, 0) + 
IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;1-2 months after planting&apos;), 1, 0) + 
IF (INCLUDES(Stage_of_Fertilizer_Application__c, &apos;At flowering&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 1.5 Stage of Fertilizer Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steps_in_Wet_Processing__c</fullName>
        <label>GAP 4.3 Steps in Wet Processing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Sort to remove unripe cherries/debris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Put cherries in container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add water and remove cherries floating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use pulping machine to pulp the coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After pulping, sort/remove broken beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferment pulped beans for atleast 2 days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wash fermented beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove mucilage from parchment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry fermented coffee on tarpaulin/mat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry fermented coffee on bare ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sort again to remove broken/black beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Store/sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Stumping_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c,&apos;Coffee desuckering, pruning and stumping&apos;), &apos;NA&apos;, 
IF (TEXT(Desuckering_Pruning_Stumping_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;, 
IF (AND(TEXT(Time_of_Coffee_Stumping__c)==&apos;6 to 7 years old&apos;, TEXT(Level_at_which_stumping_is_done__c)==&apos;1ft above ground level&apos;), &apos;Yes&apos;, &apos;No&apos;) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAP 2 Stumping Full Adoption?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>Coffee GAPs Adoptions</relationshipLabel>
        <relationshipName>Coffee_GAPs_Adoptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_of_Coffee_Stumping__c</fullName>
        <label>GAP 2.6 Time of Coffee Stumping</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6 to 7 years old</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 years and above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Fertilizer_Application__c</fullName>
        <label>GAP 1.8 Time of Fertilizer Application</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>At the beginning of rains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Rain season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Later in the season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Pruning__c</fullName>
        <label>GAP 2.4 Time of Pruning</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>After harvesting the main crop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Any time during the production season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_of_Weeding__c</fullName>
        <label>GAP 7.3 Time of Weeding</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>During the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>When weeds are too many</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tool_used_for_Desuckering__c</fullName>
        <label>GAP 2.2 Tool used for Desuckering</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Just pluck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secateurs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bow saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tool_used_for_Pruning__c</fullName>
        <label>GAP 2.5 Tool used for Pruning</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pruning saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bow saw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Fertilizers_Used__c</fullName>
        <label>GAP 1.2 Type of Fertilizers Used</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Protective_Gear__c</fullName>
        <label>GAP 7.7 Use of Protective Gear</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_records_to_make_decisions__c</fullName>
        <label>GAP 5.1 Use records to make decisions</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Addition_Full_Adoption__c</fullName>
        <formula>IF (!INCLUDES(Coffee_Farmer_GAPs_Selection__r.Top_5_Preferred_GAPs_for_Support__c, &apos;Coffee processing (pulping)&apos;), &apos;NA&apos;, 
IF (TEXT(Coffee_Processing_Discussed__c) == &apos;No&apos;, &apos;Not Discussed&apos;,
TEXT(Value_Addition__c) 
)
)</formula>
        <label>GAP 9 Coffee Processing Adoption</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Addition__c</fullName>
        <label>GAP 9.1 Coffee Processing</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weed_Control_Methods__c</fullName>
        <label>GAP 7.1 Weed Control Methods</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>By hand hoeing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mulching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals feeding on the weeds (grazing animals in the banana garden)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A combination of methods above</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None used</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Weed_control_program_plan__c</fullName>
        <label>GAP 7.4 Weed control program/plan</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Slash during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slash during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the dry season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe during the rainy season</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None done</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Coffee GAPs Adoption</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CKW__c</columns>
        <columns>Date__c</columns>
        <columns>Coffee_Processing_Discussed__c</columns>
        <columns>Value_Addition__c</columns>
        <columns>Value_Addition_Full_Adoption__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CGA{YYYY}{MM}{DD}{0}</displayFormat>
        <label>Coffee GAPs Adoption Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coffee GAPs Adoptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>